# YOLOLabelMaker

./: CMakeLists.txt
src/: MyQclass.cpp  labelmaker.cpp  labelmaker.h
